[project]
name = "gpt-pr"
version = "0.7.0"
description = "Automate your GitHub workflow with GPT-PR: an OpenAI powered library for streamlined PR generation."
authors = [
    {name = "alissonperez",email = "756802+alissonperez@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.7,<4.0"
dependencies = [
    "gitpython (>=3.1.45,<4.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "fire (>=0.7.1,<0.8.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "twine (>=6.2.0,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
